--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+/* General styles */
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-family: "Rubik Dirt", cursive;
+}
+
 /* Navbar */
 
 .navbar {
@@ -10,10 +24,40 @@
   justify-content: space-between;
 }
 
+/* Hero */
+
+.hero {
+  background-color: #f5f6f7;
+  min-height: 450px;
+  text-align: center;
+}
+
+.hero-principal {
+  padding: 3rem;
+}
+
+.hero-image {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin: 20px;
+}
+
+.hero-principal h2 {
+  font-size: 1.5rem;
+  color: #615151;
+}
+
 /* responsive */
 
 @media screen and (max-width: 767px) {
   .navbar-brand {
     display: none;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .hero-inferior-img {
+    max-width: 600px;
   }
 }
