--- a/style.css
+++ b/style.css
@@ -12,6 +12,21 @@ h1 {
   font-family: "Rubik Dirt", cursive;
 }
 
+.dark-section {
+  color: white;
+  background-color: #1b1b32;
+}
+
+.section-title {
+  font-size: 2rem;
+  padding: 15px 0;
+  font-family: "Rubik Dirt", cursive;
+}
+
+.section-text {
+  font-size: 1.2rem;
+}
+
 /* Navbar */
 
 .navbar {
@@ -46,6 +61,18 @@ h1 {
 .hero-principal h2 {
   font-size: 1.5rem;
   color: #615151;
+}
+
+/* About me */
+
+.about-me {
+  height: 500px;
+  padding: 10px;
+}
+
+.about-me .box {
+  max-width: 600px;
+  text-align: center;
 }
 
 /* responsive */
