--- a/style.css
+++ b/style.css
@@ -28,8 +28,26 @@ h1 {
   font-family: "Rubik Dirt", cursive;
 }
 
+.section-description {
+  font-size: 1.2rem;
+  color: #584e4e;
+}
+
 .section-text {
   font-size: 1.2rem;
+}
+
+.btn-info {
+  font-size: 1.1rem;
+  margin: 20px;
+}
+
+.dark-text {
+  color: black;
+}
+
+.white-text {
+  color: white;
 }
 
 /* Navbar */
@@ -125,7 +143,75 @@ h1 {
   margin: 5px;
 }
 
+/* Cards */
+
+.recent {
+  padding: 40px;
+}
+
+.recent img {
+  height: 100%;
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  display: block;
+  transition: all 0.2s ease;
+}
+
+.cards-container {
+  padding-top: 60px;
+  margin-bottom: 40px;
+}
+
+.overlay {
+  transition: all 0.2s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.overlay p {
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.product {
+  position: relative;
+}
+
+.product:hover img {
+  opacity: 0.2;
+}
+
+.product:hover .overlay {
+  opacity: 1;
+}
+
+.overlay .icons-container {
+  display: flex;
+}
+
+.overlay i {
+  color: black;
+  font-size: 60px;
+  margin: 10px;
+}
+
 /* responsive */
+
+@media screen and (max-width: 400px) {
+  .overlay p {
+    font-size: 18px;
+  }
+
+  .overlay i {
+    font-size: 40px;
+  }
+}
 
 @media screen and (max-width: 767px) {
   .navbar-brand {
