--- a/style.css
+++ b/style.css
@@ -201,6 +201,23 @@ h1 {
   margin: 10px;
 }
 
+/* Articles */
+
+.articles {
+  min-height: 500px;
+  padding: 30px;
+}
+
+.articles .card {
+  width: 80%;
+  max-width: 600px;
+  margin: 20px;
+}
+
+.articles .card-header {
+  font-weight: bold;
+}
+
 /* responsive */
 
 @media screen and (max-width: 400px) {
