--- a/style.css
+++ b/style.css
@@ -218,6 +218,60 @@ h1 {
   font-weight: bold;
 }
 
+/* Testimonials */
+
+.testimonials {
+  padding: 40px 40px 80px 40px;
+}
+
+.testimonials .carousel {
+  max-width: 800px;
+}
+
+.carousel-item {
+  height: 500px;
+}
+
+.carousel-item .container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.testimonials-img {
+  height: 150px;
+  width: 150px;
+  margin: 10px 10px 20px 10px;
+}
+
+.testimonial-text {
+  max-width: 70%;
+  font-size: 20px;
+  text-align: center;
+  font-family: "Share Tech Mono", monospace;
+}
+
+.testimonial-info {
+  font-weight: bold;
+  text-align: center;
+}
+
+.testimonial-info p {
+  margin-bottom: 0;
+}
+
+.testimonial-footer .client {
+  font-size: 1.2rem;
+}
+
+.testimonial-info .role {
+  font-size: 0.9rem;
+  color: #656060;
+}
+
 /* responsive */
 
 @media screen and (max-width: 400px) {
@@ -233,6 +287,17 @@ h1 {
 @media screen and (max-width: 767px) {
   .navbar-brand {
     display: none;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .testimonials-img {
+    height: 120px;
+    width: 120px;
+  }
+
+  .testimonial-text {
+    font-size: 18px;
   }
 }
 
